--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,17 +1,16 @@
 .logo {
     width: 55px;
     height: 55px;
-    margin-right: 20px;
+    margin-right: 10px;
     border-radius: 30px;
 }
 
 .title {
     height: 70%;
-    
+    width: 50%;
 }
 
 .user { 
-    height: 50%;
-    justify-content: flex-end;
-
+    width: 10%;
+    height: 10%;
 }
