bootstrap + routing + store module

--- a/src/app/header/user-info/user-info.component.html
+++ b/src/app/header/user-info/user-info.component.html
@@ -1,4 +1,4 @@
-<div style="display: flex; align-items: center; justify-content: flex-end;">
-    <p>{{ authService.currentUser }}</p>
-    <img class="user" src="assets/icons/{{ userIconFilename }}" alt="User Icon">
+<div style="display: flex; align-items: center; justify-content: flex-end; margin: 0; padding: 0;">
+	<h5>{{ authService.currentUser }}</h5>
+	<img class="user" src="assets/icons/{{ userIconFilename }}" alt="User Icon">
 </div>
