--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,17 @@
-<app-header></app-header>
-<div class="container">
-	<div class="row">
-		<div class="col-md-12">
-			<router-outlet></router-outlet>
-		</div>
+<app-header *ngIf="userAuthenticated"></app-header>
+
+<router-outlet></router-outlet>
+
+
+<div class="row">
+	<div class="col-md-3">
+
+	</div>
+	<div class="col-md-7">
+	</div>
+
+	<div class="col-md-2">
+
 	</div>
 </div>
+
