--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,7 +1,33 @@
 .center-container {
-    max-width: 400px; /* Adjust this value as needed */
-    width: 100%;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
+  max-width: 40vw;
+  max-height:70vh;
+  width: 100%;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+:host {
+  display: flex;
+  justify-content: center;
+  margin: 100px 0px;
+}
+
+.form-font{
+  font-size: min(2.5vh, 2.5vw);
+}
+
+.form-label-font{
+  font-size: min(2.5vh, 2.5vw);
+}
+
+::ng-deep {
+  .mat-form-field-appearance-outline .mat-form-field-outline {
+     color: white !important;
   }
+  mat-form-field {
+     .mat-hint, input, ::placeholder, .mat-form-field-label {
+        color: white !important;
+     }
+  }
+}
