--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,20 +1,35 @@
-<div class="container center-container" style="display: flex; align-items: center; justify-content: center; height: 40vh;">
+<div class="container center-container" mat-dialog-content >
   <form>
     <div class="form-group">
-      <mat-form-field class="w-100">
-        <mat-label>Username</mat-label>
+      <mat-form-field class="w-100 form-font" appearance="outline" color="accent">
+        <mat-label class="text-light">Username</mat-label>
         <input matInput>
       </mat-form-field>
     </div>
     <div class="form-group">
-      <mat-form-field class="w-100">
-        <mat-label>Enter your password</mat-label>
-        <input matInput [type]="hidePassword ? 'password' : 'text'">
-        <button mat-icon-button matSuffix (click)="hidePassword = !hidePassword" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hidePassword">
-          <mat-icon>{{hidePassword ? 'visibility_off' : 'visibility'}}</mat-icon>
-        </button>
+      <mat-form-field class="w-100 form-font mat-form-field-appearance-outline" appearance="outline" color="accent" >
+        <mat-label class="text-light">Password</mat-label>
+        <input matInput [type]="'password'">
+        
       </mat-form-field>
     </div>
-    <button mat-button>Login</button>
+    <div align="end">
+      <button mat-raised-button color="warn w-100" style="background-color: #460017;">Login</button>
+    </div>
   </form>
+  <div>
+  <br>
+  <span class="text-light"><a href="#">Forgot your password?</a></span>
+  
+  </div>
+  <hr style="color: white;">
+  <div align="center">
+    <span class="text-light">Don't have an account? <a href="#">Create one!</a></span>
+
+  </div>
 </div>
+
+
+
+
+
