--- a/src/app/header/logo-title/logo-title.component.html
+++ b/src/app/header/logo-title/logo-title.component.html
@@ -1,4 +1,4 @@
 <div style="display: flex; align-items: center;">
-    <img class="logo" src="assets/images/{{ logoFilename }}" alt="Logo">
+    <img class="logo" src="assets/images/{{ logoFilename }}" alt="Logo" (click)="redirectToHomePage()" style="cursor: pointer;">
     <img class="title" src="assets/images/{{ titleFilename }}" alt="Title">
 </div>
