--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="container center-container" mat-dialog-content >
+<div class="container center-container login-form" mat-dialog-content >
   <form>
     <div class="form-group">
       <mat-form-field class="w-100 form-font" appearance="outline" color="accent">
