--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,10 +1,10 @@
-<mat-toolbar color="accent" style="flex: 1 1 auto; display: flex; justify-content: space-between; background-color: #460017;">
+<mat-toolbar #header color="accent" class="header">
     
     <div style="display: flex; justify-content: flex-start; align-items: center;">
         <app-menu style="padding-right: 10px;" [hidden]="!userAuthenticated"></app-menu>
         <app-logo-title></app-logo-title>
     </div>
     
-    <app-user-info [hidden]="!userAuthenticated"></app-user-info>
+    <app-sections [hidden]="!userAuthenticated" style="height:100%;"></app-sections>
     
 </mat-toolbar>
