--- a/src/app/header/logo-title/logo-title.component.css
+++ b/src/app/header/logo-title/logo-title.component.css
@@ -1,11 +1,11 @@
 .logo {
-    width: 55px;
-    height: 55px;
+    width: 45px;
+    height: 45px;
     margin-right: 10px;
     border-radius: 30px;
 }
 
 .title {
-    height: 70%;
-    width: 50%;
+    max-height: 45%;
+    max-width: 45%;
 }
