--- a/src/app/header/menu/menu.component.html
+++ b/src/app/header/menu/menu.component.html
@@ -2,7 +2,7 @@
     <mat-icon style="transform: scale(1.6); padding-left: 4px;">menu</mat-icon>
 </button>
 <mat-menu #menu="matMenu">
-    <button mat-menu-item *ngFor="let menuItem of menuItems">
-        {{ menuItem.label }}
+    <button mat-menu-item *ngFor="let section of sections">
+        {{ section.label }}
     </button>
 </mat-menu>
