--- a/src/app/store/store.component.html
+++ b/src/app/store/store.component.html
@@ -1,2 +1,18 @@
-<h1> STORE IS WORKING </h1>
-<button class="btn btn-danger">asdas</button>
+<mat-drawer-container class="example-container dark-background-color" autosize>
+  <mat-drawer #drawer class="example-sidenav" mode="side">
+    <p>Auto-resizing sidenav</p>
+    @if (showFiller) {
+      <p>Lorem, ipsum dolor sit amet consectetur.</p>
+    }
+    <button (click)="showFiller = !showFiller" mat-raised-button>
+      Toggle extra text
+    </button>
+  </mat-drawer>
+
+  <div class="example-sidenav-content">
+    <button type="button" mat-button (click)="drawer.toggle()">
+      Toggle sidenav
+    </button>
+  </div>
+
+</mat-drawer-container>
