--- a/src/styles.css
+++ b/src/styles.css
@@ -5,3 +5,7 @@ body {
     font-family: Roboto, "Helvetica Neue", sans-serif; 
     background-color: #181a1b !important; 
 }
+
+.dark-background-color {
+    background-color: #181a1b !important;
+}
