--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -3,6 +3,7 @@
     flex: 1 1 auto; 
     display: flex; 
     justify-content: space-between; 
+    max-height: 13vh;
     /*
     background-color: #460017;*/
 }
