--- a/src/app/header/menu/menu.component.html
+++ b/src/app/header/menu/menu.component.html
@@ -1,8 +1,8 @@
-<button mat-button [matMenuTriggerFor]="menu" style="width: 5px;">
+<button mat-button (click)="openSidenavBar()" style="width: 5px;">
     <mat-icon style="transform: scale(1.6); padding-left: 4px;">menu</mat-icon>
 </button>
-<mat-menu #menu="matMenu">
+<!--<mat-menu #menu="matMenu">
     <button mat-menu-item *ngFor="let section of sections">
         {{ section.label }}
     </button>
-</mat-menu>
+</mat-menu>-->
