--- a/src/app/store/store.component.css
+++ b/src/app/store/store.component.css
@@ -1,10 +1,11 @@
-.example-container {
+.sidenav-container {
     width: 100%;
-    height: 95vh;
+
+    height: 93vh;
     overflow: hidden !important;
 }
   
-.example-sidenav-content {
+.sidenav-content {
     display: flex;
     height: 100%;
     align-items: center;
@@ -12,7 +13,7 @@
     overflow: hidden !important;
 }
   
-.example-sidenav {
+.sidenav {
     padding: 20px;
     height:100%; 
     width:20vw;
