--- a/src/styles.css
+++ b/src/styles.css
@@ -4,8 +4,10 @@ body {
     margin: 0; 
     font-family: Roboto, "Helvetica Neue", sans-serif; 
     background-color: #181a1b !important; 
+    /*overflow-y: hidden;*/
 }
 
 .dark-background-color {
     background-color: #181a1b !important;
 }
+
