--- a/src/app/store/store-filters/store-filters.component.html
+++ b/src/app/store/store-filters/store-filters.component.html
@@ -1,4 +1,20 @@
 <mat-card>
-    <mat-card-content>Simple card</mat-card-content>
+    <mat-card-content>
+        <h4>Filtering</h4>
+        <hr>
+        <form [formGroup]="myForm" (ngSubmit)="onSubmit()"> 
+            <label>
+              Minimum price:
+              <input type="number" formControlName="minPrice">
+            </label>
+            <br>
+            <label>
+              Maximum price:
+              <input type="number" formControlName="maxPrice">
+            </label>
+            <br>
+            <button type="submit">Submit</button>
+          </form>
+    </mat-card-content>
 </mat-card>
 
