authGuard introduction and general login procedure refactor

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="container center-container login-form" mat-dialog-content >
-  <form [formGroup]="loginForm" (ngSubmit)="login()"> 
+  <form [formGroup]="loginForm" (ngSubmit)="onSubmit()"> 
     <div class="form-group">
       <mat-form-field class="w-100 form-font" appearance="outline" color="accent">
         <mat-label class="text-light">Username</mat-label>
