--- a/src/app/store/store-products/store-products.component.html
+++ b/src/app/store/store-products/store-products.component.html
@@ -1,24 +1,21 @@
 <div class="sidenav-content" style="display: flex; flex-direction: column;">
 
-
-
 		<div class="row row-cols-auto row-cols-md-3 row-cols-xl-5 justify-content-center ml-4 mr-4 mt-4" style="padding-left: 100px; padding-right: 100px;">
 			<div class="col mb-2" *ngFor="let product of products" >
 				<div class="card h-100">
 
 					<img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="...">
-					
-					<div class="card-body p-4">
+
+					<div class="card-body">
 						<div class="text-center">
-													
-							<h5 class="fw-bolder">Fancy Product</h5>
-													
-							$40.00 - $80.00
+							<h6 class="fw-bolder">{{ product.collection || 'N/A' }} - {{ product.color || 'N/A' }}</h6>
+
+							€420.00
 						</div>
 					</div>
-					
+
 					<div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-						<div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">View options</a></div>
+						<div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
 					</div>
 				</div>
 			</div>
