Removed unused content + api update + register page WIP

--- a/src/app/header/logo-title/logo-title.component.css
+++ b/src/app/header/logo-title/logo-title.component.css
@@ -14,4 +14,10 @@
     .title {
       display: none;
     }
-  }
+}
+
+.app-logo-container {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
