--- a/src/app/store/store.component.css
+++ b/src/app/store/store.component.css
@@ -2,7 +2,8 @@
     width: 100%;
 
     /*height: 93vh;*/
-    height: 100%;
+    /*height: 100%;*/
+    height: 100vh;
     overflow: auto !important;
 }
 
@@ -19,4 +20,8 @@
     height:100%;
     width:20vw;
     overflow: hidden !important;
+}
+
+mat-drawer-container {
+  overflow: hidden !important;
 }
