--- a/src/app/store/store.component.html
+++ b/src/app/store/store.component.html
@@ -1,8 +1,10 @@
-<mat-drawer-container class="sidenav-container dark-background-color" autosize>
+<!--<mat-drawer-container class="sidenav-container dark-background-color" autosize [ngStyle]="{'overflow': 'hidden'}">
 	<mat-drawer #drawer class="sidenav" mode="side" [opened]="storeSidenavService.getSideNavState()">
 		<app-store-filters></app-store-filters>
 	</mat-drawer>
 
 	<app-store-products></app-store-products>
 
-</mat-drawer-container>
+</mat-drawer-container>-->
+
+<app-store-products></app-store-products>
