New API (update endpoint with v1) + email wip

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -32,7 +32,7 @@
   </div>
   <hr style="color: white;">
   <div align="center">
-    <span class="text-light">Don't have an account? <a href="#">Create one!</a></span>
+    <span class="text-light">Don't have an account? <a routerLink="/register">Create one!</a></span>
 
   </div>
 </div>
