--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,3 +1,38 @@
-<h1>
-  REGISTER PAGE
-</h1>
+<div class="container center-container register-form" mat-dialog-content>
+<!--  <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">-->
+<!--    <div class="form-group">-->
+<!--      <mat-form-field class="w-100 form-font" appearance="outline" color="accent">-->
+<!--        <mat-label class="text-light">Username</mat-label>-->
+<!--        <input matInput class="text-light" formControlName="username">-->
+<!--        @if (loginForm.invalid) {-->
+<!--          <mat-error>{{passwordErrorMessage()}}</mat-error>-->
+<!--        }-->
+<!--      </mat-form-field>-->
+<!--    </div>-->
+<!--    <div class="form-group">-->
+<!--      <mat-form-field class="w-100 form-font mat-form-field-appearance-outline" appearance="outline" color="accent">-->
+<!--        <mat-label class="text-light">Password</mat-label>-->
+<!--        <input matInput [type]="'password'" class="text-light" formControlName="password">-->
+<!--        @if (loginForm.invalid) {-->
+<!--          <mat-error>{{passwordErrorMessage()}}</mat-error>-->
+<!--        }-->
+<!--      </mat-form-field>-->
+<!--    </div>-->
+<!--    <div *ngIf="generalErrorMessage()" class="error-message">-->
+<!--      <mat-error>{{generalErrorMessage()}}</mat-error>-->
+<!--    </div>-->
+<!--    <div align="end">-->
+<!--      <button mat-raised-button [disabled]="loginForm.get('username')?.value === '' || loginForm.get('password')?.value === ''" color="warn w-100" style="background-color: #460017;">Login</button>-->
+<!--    </div>-->
+<!--  </form>-->
+  <div>
+    <br>
+    <span class="text-light"><a href="#">Forgot your password?</a></span>
+
+  </div>
+  <hr style="color: white;">
+  <div align="center">
+    <span class="text-light">Already have an account? <a routerLink="/login">Login here!</a></span>
+
+  </div>
+</div>
