password recovery component + api update + styling changes

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar #header color="accent" class="header">
+<mat-toolbar #header color="primary" class="header">
 
   <app-logo-title ></app-logo-title>
 
