--- a/src/app/password-recovery/password-recovery.component.html
+++ b/src/app/password-recovery/password-recovery.component.html
@@ -1,9 +1,9 @@
 <div class="container center-container register-form" mat-dialog-content>
-  <!--<form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
-    <h2 class="text-light text-center">Password recovery</h2>
-    <hr class="border-light">
+
+  <form [formGroup]="passwordRecoveryForm" (ngSubmit)="onSubmit()">
+
     <div class="form-group">
-      <mat-form-field class="w-100 form-font" appearance="outline" color="accent">
+      <mat-form-field #email class="w-100 form-font" appearance="outline" color="accent" style="border-color: white !important; border-width: 1px !important;">
         <mat-label class="text-light">Email address</mat-label>
         <input matInput class="text-light" formControlName="email">
         @if (passwordRecoveryForm.invalid) {
@@ -19,21 +19,21 @@
     <div>
       <button mat-raised-button
               [disabled]="passwordRecoveryForm.get('email')?.value === ''" color="warn w-100"
-              style="background-color: #460017;">
-        Recovery
+              class="button-bg text-light">
+        Recover your password
       </button>
     </div>
-  </form>-->
 
-  <br>
-  <div class="text-start">
-    <span class="text-light"><a routerLink="/passwordrecovery">Forgot your password?</a></span>
-  </div>
+    <div *ngIf="successMessage()" class="mt-4 d-flex align-items-center gap-2">
+      <span class="text-success fst-italic">{{ successMessage() }}</span>
+    </div>
+
+  </form>
 
   <hr class="border-light">
 
-  <div class="text-light text-center">
-    <span class="text-light">Already have an account? <a routerLink="/login">Login here!</a></span>
+  <div class="text-center">
+    <span class="text-light">Don't have an account? <a routerLink="/register">Create one!</a></span>
   </div>
 
 </div>
