Password recovery reset component WIP + api changes

--- a/src/app/password-recovery/password-recovery.component.html
+++ b/src/app/password-recovery/password-recovery.component.html
@@ -3,7 +3,7 @@
   <form [formGroup]="passwordRecoveryForm" (ngSubmit)="onSubmit()">
 
     <div class="form-group">
-      <mat-form-field #email class="w-100 form-font" appearance="outline" color="accent" style="border-color: white !important; border-width: 1px !important;">
+      <mat-form-field #email class="w-100 form-font" appearance="outline" color="accent">
         <mat-label class="text-light">Email address</mat-label>
         <input matInput class="text-light" formControlName="email">
         @if (passwordRecoveryForm.invalid) {
