passwordrecovery/reset/ fe improvements

--- a/src/app/password-recovery/password-recovery-reset/password-recovery-reset.component.html
+++ b/src/app/password-recovery/password-recovery-reset/password-recovery-reset.component.html
@@ -5,16 +5,40 @@
     <div class="form-group">
       <mat-form-field #password class="w-100 form-font" appearance="outline" color="accent">
         <mat-label class="text-light">New password</mat-label>
-        <input matInput class="text-light" formControlName="password">
+        <input matInput class="text-light"
+               [type]="showPassword ? 'text' : 'password'"
+               formControlName="password">
+
+        <button type="button"
+                mat-icon-button
+                matSuffix
+                (click)="showPassword = !showPassword"
+                [attr.aria-label]="'Toggle password visibility'"
+                [attr.aria-pressed]="showPassword">
+          <mat-icon>{{ showPassword ? 'visibility_off' : 'visibility' }}</mat-icon>
+        </button>
+
         @if (passwordResetForm.invalid) {
-          <mat-error>{{emailErrorMessage()}}</mat-error>
+          <mat-error>{{passwordErrorMessage()}}</mat-error>
         }
       </mat-form-field>
       <mat-form-field #repeatedpassword class="w-100 form-font" appearance="outline" color="accent">
         <mat-label class="text-light">Repeat your new password</mat-label>
-        <input matInput class="text-light" formControlName="repeatedpassword">
+        <input matInput class="text-light"
+               [type]="showRepeatedPassword ? 'text' : 'password'"
+               formControlName="repeatedpassword">
+
+        <button type="button"
+                mat-icon-button
+                matSuffix
+                (click)="showRepeatedPassword = !showRepeatedPassword"
+                [attr.aria-label]="'Toggle repeated password visibility'"
+                [attr.aria-pressed]="showRepeatedPassword">
+          <mat-icon>{{ showRepeatedPassword ? 'visibility_off' : 'visibility' }}</mat-icon>
+        </button>
+
         @if (passwordResetForm.invalid) {
-          <mat-error>{{emailErrorMessage()}}</mat-error>
+          <mat-error>{{repeatedPasswordErrorMessage()}}</mat-error>
         }
       </mat-form-field>
     </div>
@@ -25,7 +49,8 @@
 
     <div>
       <button mat-raised-button
-              [disabled]="passwordResetForm.get('email')?.value === ''" color="warn w-100"
+              [disabled]="passwordResetForm.invalid"
+              color="warn w-100"
               class="button-bg text-light">
         Save password
       </button>
@@ -35,11 +60,9 @@
       <span class="text-success fst-italic">{{ successMessage() }}</span>
     </div>
 
-
     <div class="mt-4 text-light text-start">
       <a routerLink="/login">Back to login!</a>
     </div>
 
   </form>
-
 </div>
