Functional password recovery procedure + minor graphical improvements + api updates

--- a/src/app/password-recovery/password-recovery-reset/password-recovery-reset.component.html
+++ b/src/app/password-recovery/password-recovery-reset/password-recovery-reset.component.html
@@ -1,8 +1,18 @@
-<div class="container center-container register-form" mat-dialog-content>
+<div class="container center-container password-recovery-reset-form" mat-dialog-content>
 
   <form [formGroup]="passwordResetForm" (ngSubmit)="onSubmit()">
 
+    <h5 class="text-light">Set your new password</h5>
+
+    <hr class="border-light">
     <div class="form-group">
+      <mat-form-field #email class="w-100 form-font" appearance="outline" color="accent">
+        <mat-label class="text-light">Email</mat-label>
+        <input matInput class="text-light"
+               [value]="passwordRecoveryRequestEmail"
+               readonly>
+      </mat-form-field>
+
       <mat-form-field #password class="w-100 form-font" appearance="outline" color="accent">
         <mat-label class="text-light">New password</mat-label>
         <input matInput class="text-light"
@@ -60,7 +70,7 @@
       <span class="text-success fst-italic">{{ successMessage() }}</span>
     </div>
 
-    <div class="mt-4 text-light text-start">
+    <div class="mt-4 text-light text-end">
       <a routerLink="/login">Back to login!</a>
     </div>
 
