--- a/src/app/password-recovery/password-recovery.component.html
+++ b/src/app/password-recovery/password-recovery.component.html
@@ -1,4 +1,4 @@
-<div class="container center-container register-form" mat-dialog-content>
+<div class="container center-container password-recovery-form" mat-dialog-content>
 
   <form [formGroup]="passwordRecoveryForm" (ngSubmit)="onSubmit()">
 
