--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,9 +2,14 @@
 
   <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
     <div class="form-group">
-      <mat-form-field class="w-100 form-font" appearance="outline" color="accent">
+      <mat-form-field class="w-100 form-font"
+                      appearance="outline"
+                      color="accent">
+
         <mat-label class="text-light">Username</mat-label>
-        <input matInput class="text-light" formControlName="username">
+
+        <input matInput class="text-light"
+               formControlName="username">
         @if (loginForm.invalid) {
           <mat-error>{{passwordErrorMessage()}}</mat-error>
         }
@@ -14,10 +19,24 @@
     <div class="form-group">
       <mat-form-field class="w-100 form-font mat-form-field-appearance-outline" appearance="outline" color="accent">
         <mat-label class="text-light">Password</mat-label>
-        <input matInput [type]="'password'" class="text-light" formControlName="password">
+        <input matInput
+               [type]="showPassword ? 'text' : 'password'"
+               class="text-light"
+               formControlName="password">
+
         @if (loginForm.invalid) {
           <mat-error>{{passwordErrorMessage()}}</mat-error>
         }
+
+        <button type="button"
+                mat-icon-button
+                matSuffix
+                (click)="showPassword = !showPassword"
+                [attr.aria-label]="'Toggle password visibility'"
+                [attr.aria-pressed]="showPassword">
+          <mat-icon>{{ showPassword ? 'visibility_off' : 'visibility' }}</mat-icon>
+        </button>
+
       </mat-form-field>
     </div>
 
@@ -26,7 +45,8 @@
     </div>
 
     <div class="text-center">
-      <button mat-raised-button [disabled]="loginForm.get('username')?.value === '' || loginForm.get('password')?.value === ''"
+      <button mat-raised-button
+              [disabled]="loginForm.get('username')?.value === '' || loginForm.get('password')?.value === ''"
               color="warn w-100"
               style="background-color: #460017;">
         Login
